--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -103,4 +103,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/arjunchakri/sherlock-heroku-poc</url>
+        </repository>
+    </distributionManagement>
 </project>
