--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.messages.basename=messages/messages
 spring.profiles.active=springdatajpa
 
 # mysql
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/pet_clinic
-#spring.datasource.username=root
-#spring.datasource.password=Hongqi9!@@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pet_clinic
+spring.datasource.username=root
+spring.datasource.password=Hongqi9!@@
 
 # Jpa
 spring.jpa.hibernate.ddl-auto=validate
