--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -13,10 +13,11 @@ spring.datasource.username=root
 spring.datasource.password=Hongqi9!@@
 
 # Jpa
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format-sql=true
 spring.level.org.hibernate.SQL=DEBUG
 spring.level.org.hibernate.type=TRACE
 
 jsf.primefaces.FONT_AWESOME=true
+server.servlet.encoding.enabled=false
