--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,39 @@
 version: 2.1
 
-orbs:
-  maven: circleci/maven@0.0.12
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:11-browsers-legacy
 
-workflows:
-  maven_test:
-    jobs:
-      - maven/test # checkout, build, test, and upload test results
+      working_directory: ~/repo
+
+      environment:
+        MAVEN_OPTS: -Xmx3200m
+
+      steps:
+        - checkout
+        - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            - v1-dependencies-
+
+        - run: mvn install -DskipTests
+
+        - run: mvn dependency:go-offline
+
+        - save_cache:
+            paths:
+              - ~/.m2
+
+              key: v1-dependencies-{{ checksum "pom.xm" }}
+
+        - run: mvn integration-test
+
+
+#orbs:
+#  maven: circleci/maven@0.0.12
+#
+#workflows:
+#  maven_test:
+#    jobs:
+#      - maven/test # checkout, build, test, and upload test results
