--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -12,9 +12,11 @@
     <artifactId>pet-clinic-data</artifactId>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
         <start-class>com.oothan.springdev.petclinic.PetClinicApplication</start-class>
     </properties>
