--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -12,10 +12,11 @@
     <artifactId>pet-clinic-web</artifactId>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- Web dependencies -->
         <webjars-bootstrap.version>5.1.3</webjars-bootstrap.version>
@@ -152,26 +153,26 @@
                         <artifactId>bootstrap</artifactId>
                         <version>${webjars-bootstrap.version}</version>
                     </dependency>
-<!--                    <dependency>-->
-<!--                        <groupId>org.mockito</groupId>-->
-<!--                        <artifactId>mockito-core</artifactId>-->
-<!--                        <version>4.6.1</version>-->
-<!--                    </dependency>-->
+                    <dependency>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-core</artifactId>
+                        <version>4.6.1</version>
+                    </dependency>
                 </dependencies>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <!--                <dependencies>-->
-                <!--                    <dependency>-->
-                <!--                        <groupId>org.junit.platform</groupId>-->
-                <!--                        <artifactId>junit-platform-surefire-provider</artifactId>-->
-                <!--                        <version>1.3.2</version>-->
-                <!--                        <scope>test</scope>-->
-                <!--                    </dependency>-->
-                <!--                </dependencies>-->
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>2.22.2</version>-->
+<!--                &lt;!&ndash;                <dependencies>&ndash;&gt;-->
+<!--                &lt;!&ndash;                    <dependency>&ndash;&gt;-->
+<!--                &lt;!&ndash;                        <groupId>org.junit.platform</groupId>&ndash;&gt;-->
+<!--                &lt;!&ndash;                        <artifactId>junit-platform-surefire-provider</artifactId>&ndash;&gt;-->
+<!--                &lt;!&ndash;                        <version>1.3.2</version>&ndash;&gt;-->
+<!--                &lt;!&ndash;                        <scope>test</scope>&ndash;&gt;-->
+<!--                &lt;!&ndash;                    </dependency>&ndash;&gt;-->
+<!--                &lt;!&ndash;                </dependencies>&ndash;&gt;-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
