--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -153,11 +153,11 @@
                         <artifactId>bootstrap</artifactId>
                         <version>${webjars-bootstrap.version}</version>
                     </dependency>
-                    <dependency>
-                        <groupId>org.mockito</groupId>
-                        <artifactId>mockito-core</artifactId>
-                        <version>4.6.1</version>
-                    </dependency>
+<!--                    <dependency>-->
+<!--                        <groupId>org.mockito</groupId>-->
+<!--                        <artifactId>mockito-core</artifactId>-->
+<!--                        <version>4.6.1</version>-->
+<!--                    </dependency>-->
                 </dependencies>
             </plugin>
 <!--            <plugin>-->
