--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,15 @@ jobs:
     docker:
       - image: circleci/openjdk:11-browsers-legacy
 
+      image: mysql:5.7
+        environment:
+          - MYSQL_ROOT_PASSWORD=root
+          - MYSQL_DATABASE=database
+          - MYSQL_USER=root
+          - MYSQL_PASSWORD=root
+        ports:
+          - 3307:3306
+
     working_directory: ~/repo
 
     environment:
