setup fixed circle ci. Close #6

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.profiles.active=springdatajpa
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pet_clinic
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pet_clinic?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Hongqi9!@@
 
