--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,8 @@ services:
     image: app:latest
     ports:
       - 8091:8091
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/database?autoReconnect=true&useSSL=false
     depends_on:
       - docker-mysql
 
