setup fixed circle ci. Close #6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,13 @@ jobs:
     docker:
       - image: circleci/openjdk:11-browsers-legacy
 
+      - image: circleci/mysql:latest-ram
+          environment:
+              - MYSQL_ROOT_PASSWORD: Hongqi9!@@
+              - MYSQL_DATABASE: pet_clinic
+              - MYSQL_USER: root
+              - MYSQL_PASSWORD: Hongqi9!@@
+
     working_directory: ~/repo
 
     environment:
@@ -29,25 +36,25 @@ jobs:
 
       - run: mvn integration-test
 
-services:
-  docker-mysql:
-    image: mysql:5.7
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=pet_clinic
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
-    ports:
-      - 3307:3306
-
-  app:
-    image: app:latest
-    ports:
-      - 8091:8091
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/pet_clinic?autoReconnect=true&useSSL=false
-    depends_on:
-      - docker-mysql
+#services:
+#  docker-mysql:
+#    image: mysql:5.7
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=root
+#      - MYSQL_DATABASE=pet_clinic
+#      - MYSQL_USER=root
+#      - MYSQL_PASSWORD=root
+#    ports:
+#      - 3307:3306
+#
+#  app:
+#    image: app:latest
+#    ports:
+#      - 8091:8091
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/pet_clinic?autoReconnect=true&useSSL=false
+#    depends_on:
+#      - docker-mysql
 
 
 #orbs:
