--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,12 @@ jobs:
   build:
     docker:
 
-      - image: circleci/mysql:latest-ram
-          environment:
-              - MYSQL_ROOT_PASSWORD: Hongqi9!@@
-              - MYSQL_DATABASE: pet_clinic
-              - MYSQL_USER: root
-              - MYSQL_PASSWORD: Hongqi9!@@
+#      - image: circleci/mysql:latest-ram
+#          environment:
+#              - MYSQL_ROOT_PASSWORD: Hongqi9!@@
+#              - MYSQL_DATABASE: pet_clinic
+#              - MYSQL_USER: root
+#              - MYSQL_PASSWORD: Hongqi9!@@
 
       - image: circleci/openjdk:11-browsers-legacy
 
