--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,13 @@ jobs:
 #              - MYSQL_PASSWORD: Hongqi9!@@
 
       - image: circleci/openjdk:11-browsers-legacy
+        environment:
+          DB_ROOT_USER: root
+          DB_DRIVER: com.mysql.cj.jdbc.Driver
+          DB_PASS: Hongqi9!@@
+          MEMBER_DB_URL: jdbc:mysql://127.0.0.1:3306/pet_clinic
+          CARD_DB_URL: jdbc:mysql://127.0.0.1:3306/pet_clinic
+          CARD_HOLDER_DB_URL: jdbc:mysql://127.0.0.1:3306/pet_clinic
 
     working_directory: ~/repo
 
