setup fixed circle ci. Close #6

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.username=root
 spring.datasource.password=Hongqi9!@@
 
 # Jpa
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format-sql=true
 spring.level.org.hibernate.SQL=DEBUG
