--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,36 +12,36 @@ jobs:
 #              - MYSQL_PASSWORD: Hongqi9!@@
 
       - image: circleci/openjdk:11-browsers-legacy
+        environment:
+          DB_ROOT_USER: root
+          DB_URL: jdbc:mysql://localhost:3306/pet_clinic #farm indicates the name of the database
+          DB_DRIVER: com.mysql.cj.jdbc.Driver
+          DB_PASS: ""
+        MAVEN_OPTS: -Xmx3200m
+
+      # Speficy your version of MYSQL
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: user
-          MYSQL_PASSWORD: passw0rd
+          # Remember to always use passwords, and strong ones. Dont be like me.
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ''
 
     working_directory: ~/repo
 
-    environment:
-      MAVEN_OPTS: -Xmx3200m
 
     steps:
       - checkout
       - run:
-          name: Waiting for MySQL to be ready
-          command: |
-            for i in `seq 1 10`;
-            do
-            nc -z 127.0.0.1 3306 && echo Success && exit 0
-            echo -n .
-            sleep 1
-            done
-            echo Failed waiting for MySQL && exit 1
-      - run:
-          name: Install MySQL CLI; Import dummy data; run an example query
-          command: |
-            sudo apt-get update
-            sudo apt-get install mysql*
-            mysql -h 127.0.0.1 -u root -prootpw --execute="use test_db;"
+          name: Wait for Database Connection
+          # preinstalled in circleci/* docker image
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      #install mysql client
+      #if default-mysql-client fails, try the old way "sudo apt-get install mysql-client"
+      - run: sudo apt-get install default-mysql-client
+      # create databases
+      - run: mysql -h 127.0.0.1 -u root -e "create database pet_clinic"
+
+
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
