--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       #install mysql client
       #if default-mysql-client fails, try the old way "sudo apt-get install mysql-client"
-      - run: sudo apt-get install -y default-mysql-client
+      - run: sudo apt-get install mysql-server
       # create databases
       - run: mysql -h 127.0.0.1 -u root -e "create database pet_clinic"
 
