--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ jobs:
 #              - MYSQL_PASSWORD: Hongqi9!@@
 
       - image: circleci/openjdk:11-browsers-legacy
-        environment:
+#        environment:
 #          DB_ROOT_USER: root
 #          DB_URL: jdbc:mysql://localhost:3306/pet_clinic #farm indicates the name of the database
 #          DB_DRIVER: com.mysql.cj.jdbc.Driver
 #          DB_PASS: ""
-          MAVEN_OPTS: -Xmx3200m
+#          MAVEN_OPTS: -Xmx3200m
 
       # Speficy your version of MYSQL
 #      - image: circleci/mysql:5.7
@@ -27,6 +27,9 @@ jobs:
 #          MYSQL_ROOT_PASSWORD: ''
 
     working_directory: ~/repo
+    environment:
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
 
 
     steps:
