--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -45,10 +45,10 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.cc.cloud</groupId>
-            <artifactId>cloud-jpa-common</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.cc.cloud</groupId>-->
+<!--            <artifactId>cloud-jpa-common</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
