--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -7,14 +7,14 @@ spring.messages.basename=messages/messages
 spring.profiles.active=springdatajpa
 
 # mysql
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pet_clinic?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Hongqi9!@@
 
 # Jpa
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format-sql=true
 spring.level.org.hibernate.SQL=DEBUG
